src/redcms-base/assets/default-skin.css
/* Base styles */
menu, ol, ul {
    padding:0;
}
ul, dl {
    margin:0;
}
li {
	list-style: none;
}
hr {
	border: 1px solid lightgray;
	border-top: none;
}
input[type=submit] {}
input[type=file] {
    min-width: 350px;
}
input[type=text], input[type=password], select, textarea {
    border: 1px solid #ccc;
    padding: 6px 7px;
}
select {
    padding: 6px 2px;
}
p, pre {
	/*margin: 0;*/
}

/* CSS shortcuts for RedCMS */
.redcms-clear {
    clear:both;
}
.redcms-center {
    text-align:center;
}
.redcms-hidden {
    display:none;	
}

/* CSS BASE CLASSES FOR REDCMS */
.redcms-small {
    color: gray;
    font-size: 13px;
    font-style: italic;
    font-weight: normal;
}

/* Fluid Grids layout */
.redcms-layout {
    padding-left: 200px; /* allow for left column (#nav) */
    padding-right: 10px;
}
.redcms-left {
    margin-left: -200px;
    width: 200px;	/* workaround for IE9 not firing mouse events on #side due to negative margin */
}
.redcms-left .redcms-content {
    margin: 0 10px;
}
.redcms-bd {
    width:100%;
}
.redcms-hd {
    margin: 10px 8px 5px 10px;
    font-weight: bold;
    font-size: 36px;
    padding: 0 8px;
}
.redcms-bd .redcms-bd-title {
    padding: 8px;
    border-bottom: none;
}
.redcms-bd .redcms-bd-content {
    padding: 8px;
    min-height: 280px;
}
.redcms-ft .redcms-ft-content {
    text-align: center;
    font-size: 8pt;
    font-style: italic;
}
.redcms-ft .redcms-ft-content hr {
    margin: 10px 10px 0;
}

/* Default fieldset view */
fieldset {
    border: none;
    margin: 0;
    padding: 0;
}
fieldset legend {
    font-weight: bold;
}
.redcms-user fieldset {
    border: 1px solid lightgray;
    margin: 0.5em;
    padding: 0.8em;
    text-align: justify;
}

/* Panel styles */
.yui3-skin-sam .yui3-panel-content {
    border: 1px solid #a40000;
}
.yui3-skin-sam .yui3-panel .yui3-widget-hd {
    background: none;
    color: #A40000;
    font-size: 186%;
    padding: 8px 15px 2px 15px;
}
.yui3-skin-sam .yui3-panel .yui3-widget-hd .yui3-widget-buttons {
    padding: 15px;
}
.yui3-skin-sam .yui3-panel .yui3-widget-hd .yui3-button-close {
    width: 24px;
    height: 26px;
    border: 1px solid white;
}
.yui3-skin-sam .yui3-panel .yui3-widget-hd .yui3-button-close:hover {
	border: 1px solid #a40000;
} 
.yui3-skin-sam .yui3-panel .yui3-widget-hd .yui3-button-close:before {	
	content: url(icon-close.png);
    font-size: 23px;
    color: #A40000;

	vertical-align: middle;

	margin-top: 0px;
	width: 19px;
	height: 28px;
}
.yui3-skin-sam .yui3-panel .yui3-widget-bd {
    padding: 10px 15px 20px;
}
.yui3-skin-sam .yui3-dd-draggable .yui3-widget-hd {
    cursor:move;
}

/* Button style */
.yui3-button {
    border: none;
    box-shadow: none;
    padding: 0.5em 1em 0.55em;
    background: #a40000;
    color: white;
}

/** RedCMS Buttons (base on YUI2 Buttons for styling) */
.yui3-redcms-button {
    display: inline-block;
    vertical-align: text-bottom;
    border-width: 1px 0;
    border-style: solid;
    border-color: gray;
    background: url(sprite.png) repeat-x 0 0;
    margin: auto 0;
    cursor:pointer;
}
.yui3-redcms-button span {
    border-width: 0 1px;
    border-style: solid;
    border-color: gray;
    margin: 0 0px;
    display: block;
    _margin: 0;
}
.yui3-redcms-button span a {
    padding: 0 10px;
    font-size: 93%;
    line-height: 2.4;
    min-height: 2em;
    color: black;
    text-decoration: none;
}
.yui3-redcms-button span a.yui3-redcms-button-add {
    padding: 3px 10px;
    padding-left: 2.5em;
    background: url(redcms-sprite.png) no-repeat scroll 9px -59px;
}
.yui3-redcms-button:hover {
    border-color: #7D98B8;
    background-position: 0 -1300px;	
}

/* Loading style */
.yui3-skin-sam .yui3-redcms-loading,
.yui3-skin-sam .yui3-overlay-window  .yui3-redcms-loading {
    background: url(loading.gif) no-repeat scroll center center;
    min-height: 100px;
    min-width: 100px;
}
.yui3-skin-sam .yui3-redcms-loading .yui3-redcms-loading {
    background: none;
}
.yui3-redcms-loading-overlay {
    position:relative;
}
.yui3-redcms-loading-overlay div{
    position: absolute;
    width: 100%;
    background: rgb(211, 211, 211);/* Fallback for web browsers that doesn't support RGBa */
    background: rgba(255, 255, 255, 0.8); /* RGBa with 0.6 opacity */
    background-image:url('loading.gif');
    background-repeat:no-repeat;
    background-position-x: center; 
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#D3D3D300, endColorstr=#D3D3D300); /* For IE 5.5 - 7*/
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#D3D3D300, endColorstr=#D3D3D300)"; /* For IE 8*/
    background-position-y: 50px;
}

/* Inputex styles */
.yui3-skin-sam div.inputEx-label {
    padding-top: 7px;
}
.yui3-skin-sam .inputEx-Button {
    border: none;
    padding: 7px 15px;
    background:#a40000;
    color: white;
    margin-top: 10px;
    font-size: 15px;
    margin-right: 5px;
}
.yui3-skin-sam .inputEx-Button + .inputEx-Button {
    background: lightgray;
    color: black;
}
.yui3-skin-sam .inputEx-Button:hover {
    background: gray;
}

/* Tinymce */
.defaultSkin td.mceToolbar {
    background: none !important;
}
.defaultSkin .mceButton, .defaultSkin .mceSplitButton a.mceAction, .defaultSkin .mceSplitButton a.mceOpen{
    border: 1px solid transparent !important;
}
.yui3-skin-sam .defaultSkin .mceSeparator {
    background: none;
    background: #ccc;
    width: 1px;
}
.yui3-skin-sam .defaultSkin .mceStatusbar {
    background: white;
    height: 12px;    
}
.yui3-skin-sam .defaultSkin .mceStatusbar a.mceResize {
    background-position-y: -8px;
    height: 13px;
}
.defaultSkin .mceStatusbar div {
    display: none;
}
.defaultSkin .mceListBox .mceText {
	border-right: 0 !important;
}
.defaultSkin .mceListBox .mceOpen {
	border-left: 0 !important;
}

/* RedCMS MsgBox styles */
.yui3-skin-sam .yui3-redcms-msgbox {
    border: 1px solid lightgray;
    padding: 15px 10px 10px 60px;
    margin-bottom: 20px;
    min-height: 33px;
}
/* ... */

